# sec_doc_tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  env_sample  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.github/workflows/: python_build.yaml
sec_doc_tool/: __init__.py  __main__.py  edgar.py  file_cache.py  nlp_model.py  storage.py  text_extractor.py  utils.py
sec_doc_tool/catalog/: all_485bpos_pl.parquet  interested_cik_list.csv
sec_doc_tool/chunking/: __init__.py  document.py  html_splitter.py  text_chunker.py  text_extractor.py
sec_doc_tool/tagging/: llm_tagger.py  llm_tagger_prompt.py  parser.py  text_tagger.py
sec_doc_tool/text_utils/: __init__.py  generic_filter.py  partial_matcher.py  text_extractor.py  text_normalizer.py
tests/: conftest.py  test_cli.py  test_doc_chunking.py  test_edgar.py  test_generic_fund_filtering.py  test_html_splitter.py  test_llm_tagger.py  test_partial_matching.py  test_tagging_response_parser.py  test_text_chunker.py  test_text_extractor.py  test_text_normalization.py  test_text_tagger.py  test_type_based_evaluation.py
tests/mockdata/: doc.lst
tests/mockdata/cache/chunked_filing/1000351/: 0001387131-19-000505.json
tests/mockdata/cache/edgar/Archives/edgar/data/1002427/000113322824004879/: 0001133228-24-004879-index-headers.html  msif-html7854_485bpos.htm
tests/mockdata/cache/edgar/data/1000351/000138713119000505/: 0001387131-19-000505-index-headers.html  leuthold-485bpos_013119.htm
tests/mockdata/cache/edgar/data/1002427/000113322824004879/: msif-html7854_485bpos.htm
tests/mockdata/cache/edgar/data/1002537/000089418919002442/: 0000894189-19-002442-index-headers.html  combinedneedham_485b.htm
tests/mockdata/cache/edgar/data/1201932/000095013604001365/: 0000950136-04-001365-index.html  file001.txt
tests/mockdata/cache/edgar/data/356683/000168386323007309/: 0001683863-23-007309-index-headers.html  f36670d1.htm
tests/mockdata/cache/html_filing_pages/: 0001193125-22-229443_page_789.html
