[project]
name = "sec_doc_tool"
version = "0.3.0"
description = "SEC document toolkit"
authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
readme = "README.md"

requires-python = ">= 3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-cloud-storage<3.0",
    "html2text>=2025.4.15",
    "polars>=1.0.0",
    "python-dotenv >= 1.0.1",
    "pyyaml>=6.0.2",
    "spacy>=3.8.7",
    "tenacity>=8.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sec_doc_tool*"]
exclude = ["tests", "tmp"]

[tool.setuptools.package-data]
"sec_doc_tool.catalog" = ["*.csv", "*.parquet"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "pytest >= 8.3.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14",
    "pytest-cov >= 6.1",
    "pytest-asyncio>=0.25.3",
    "pre-commit >= 4.0.1",
    "ruff >= 0.12.3",
    "pyright >= 1.1.403",
    "en-core-web-sm",
]

[tool.uv]
managed = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:pydantic.main",
 ]
env_files = [".env"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
]

# see ruff configuration options at
# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 90
indent-width = 4
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "I",
    "A",
] # Enable checks for PEP8, imports, and other standard rules
ignore = ["E203", "E266", "E501"]
